--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
-                <img src="images/about.jpg" alt="about" class="img-responsive slideanim">
+                <img src="images/about.JPG" alt="about" class="img-responsive slideanim">
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="about-info">
